# routing

./: .gitignore  ATTRIBUTION.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  HANDOFF.md  LICENSE.data  Makefile  PLAN-APP.md  PLAN-BASEMAP.md  PLAN-BROWSER.md  PLAN-BUILD.md  PLAN-EDIT.md  PLAN-MAP.md  PLAN-MATCH.md  PLAN-PERF.md  PLAN-ROUTING.md  PLAN-STORE.md  PLAN-TILES.md  PLAN.md  README.md  app.js  controls.js  elevation.js  geo.js  geolocate.js  gpx.js  index.html  loft.toml  rough.js  routes.js  styles.css  undo.js  ws.js
browser/: .gitignore  README.md  areas.txt  bake_tiles.mjs  build-site.mjs  build-standalone.mjs  build-store-kernel.mjs  build.mjs  buildings.txt  cdp_app_test.mjs  cdp_deliver.mjs  cdp_expose.mjs  cdp_loop_probe.mjs  cdp_profile.mjs  cdp_verify.mjs  cdp_verify_map.mjs  cdp_verify_standalone.mjs  cdp_verify_store.mjs  cdp_verify_tiles.mjs  index.html  lines.txt  loft-deliver.js  loft-store.mjs  loop_probe.loft  map-demo.html  map.mjs  map.test.mjs  package-lock.json  package.json  places.txt  pois.txt  read_probe.loft  rough.mjs  serve.mjs  smoke.mjs  store-app.html  store-app.mjs  store-geom.mjs  store-kernel.mjs  store-kernel.wasm  (+3 more)
client/: app_kernel.loft  basemap_kernel.loft  basemap_view.loft  kernel.loft  web_basemap_kernel.loft  web_kernel.loft
docs/: ARCHITECTURE.md  loft-binary-bridge.md  loft-build-phase-adoption.md  loft-feedback.md
lib/web/wasm/: Cargo.toml  host.js
lib/web/wasm/src/: lib.rs
prototypes/: grid_pathfinder.loft
server/: server.loft
tools/: app_headless_test.sh  basemap_isolation_gate.sh  (+46 more)
(+82 files in other folders)
